--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -51,8 +51,9 @@ If infinitesimal change $h$ if denote by $\Delta x$. If $f(x)$ and $g(x)$ are di
 \item $\lim_{h \to 0} \frac{f(x+h)g(x+h)-f(x)g(x)}{h}=f'(x)g(x)+f(x)g'(x)$
 \item $\lim_{h \to 0}( \frac{f(x+h)}{f(x)} )^{\frac{1}{h}}=exp(\frac{f'(x)}{f(x)})$
 \item $\lim_{h \to 0}( \frac{f(e^h x)}{f(x)} )^{\frac{1}{h}}=exp(\frac{xf'(x)}{f(x)})$
-
 \end{itemize}
-
-
+If $f(x)$ and $g(x) $are differentiable on an open interval containing $c$, except possibly $c$ itself, and $\lim_{x \to c} f(x)=\lim_{x \to c} g(x)=0$ or $\pm \infty$. \\ 
+Jean Bernoulli or L'Hopital's rule can be used: $$\lim_{x \to c} \frac{f(x)}{g(x)}= \frac{f'(x)}{g'(x)}$$
+\textbf{Inequalities} \\
+If $f(x) \le g(x)$ for all $x$ in interval that contains $c$, except possibly $c$ itself, and the limit of $f(x)$ and $g(x)$ both exist at $c$, then
 \end{document}
