--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -55,5 +55,8 @@ If infinitesimal change $h$ if denote by $\Delta x$. If $f(x)$ and $g(x)$ are di
 If $f(x)$ and $g(x) $are differentiable on an open interval containing $c$, except possibly $c$ itself, and $\lim_{x \to c} f(x)=\lim_{x \to c} g(x)=0$ or $\pm \infty$. \\ 
 Jean Bernoulli or L'Hopital's rule can be used: $$\lim_{x \to c} \frac{f(x)}{g(x)}= \frac{f'(x)}{g'(x)}$$
 \textbf{Inequalities} \\
-If $f(x) \le g(x)$ for all $x$ in interval that contains $c$, except possibly $c$ itself, and the limit of $f(x)$ and $g(x)$ both exist at $c$, then
+If $f(x) \le g(x)$ for all $x$ in interval that contains $c$, except possibly $c$ itself, and the limit of $f(x)$ and $g(x)$ both exist at $c$, then $\lim_{x \to c} f(x) \le \lim_{x \to c} g(x) $ \\
+If $\lim_{x \to c} f(x)= \lim_{x \to c} h(x)=L $ and $$f(x) \le g(x) \le h(x)$$ for all x in an open interval that contains $c$, except 
+possibly c itself, $\lim_{x \to c} g(x)=L$. This is know as $Squeeze \thickspace Theorem.$
+
 \end{document}
