--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -58,5 +58,15 @@ Jean Bernoulli or L'Hopital's rule can be used: $$\lim_{x \to c} \frac{f(x)}{g(x
 If $f(x) \le g(x)$ for all $x$ in interval that contains $c$, except possibly $c$ itself, and the limit of $f(x)$ and $g(x)$ both exist at $c$, then $\lim_{x \to c} f(x) \le \lim_{x \to c} g(x) $ \\
 If $\lim_{x \to c} f(x)= \lim_{x \to c} h(x)=L $ and $$f(x) \le g(x) \le h(x)$$ for all x in an open interval that contains $c$, except 
 possibly c itself, $\lim_{x \to c} g(x)=L$. This is know as $Squeeze \thickspace Theorem.$
-
+\subsection{Exponential Functions}
+\textbf{Function of form $f(x)^{g(x)}$}
+\begin{itemize}
+\item $\lim_{x \to + \infty} (\frac{x}{x+k})^x=e^{-k}$
+\item $\lim_{x \to 0} (1+x)^\frac{1}{x}=e$
+\item $\lim_{x \to 0} (1+kx)^\frac{m}{x}=e^{mk}$
+\item $\lim_{x \to + \infty} (1+ \frac{1}{x})^x=e$
+\item $\lim_{x \to + \infty} (1- \frac{1}{x})^x=\frac{1}{e}$
+\item $\lim_{x \to + \infty} (1+ \frac{k}{x})^{mx}=e^{mk}$
+\item $\lim_{x \to 0} (1+ a(e^{-x}-1)^{- \frac{1}{x}})=e^a$
+\end{itemize}
 \end{document}
