--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -69,4 +69,17 @@ possibly c itself, $\lim_{x \to c} g(x)=L$. This is know as $Squeeze \thickspace
 \item $\lim_{x \to + \infty} (1+ \frac{k}{x})^{mx}=e^{mk}$
 \item $\lim_{x \to 0} (1+ a(e^{-x}-1)^{- \frac{1}{x}})=e^a$
 \end{itemize}
+\textbf{Sum products and Composites}
+\begin{itemize}
+\item $\lim_{x \to 0} (\frac{a^x -1}{x})=lna$
+\item $\lim_{x \to 0} (\frac{e^x -1}{x})=1$
+\item $\lim_{x \to 0} (\frac{e^{ax}-1}{x})=a$
+\end{itemize}
+\subsection{Logarithmic Functions}
+\begin{itemize}
+\item $\lim_{x \to 1} \frac{lnx}{x-1}=1$
+\item $\lim_{x \to 0} \frac{ln(x+1)}{x}=1$
+\item $\lim_{x \to 0} \frac{-ln(1+a(e^{-x}-1)}{x}=a$
+\end{itemize}
+
 \end{document}
