--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -81,5 +81,11 @@ possibly c itself, $\lim_{x \to c} g(x)=L$. This is know as $Squeeze \thickspace
 \item $\lim_{x \to 0} \frac{ln(x+1)}{x}=1$
 \item $\lim_{x \to 0} \frac{-ln(1+a(e^{-x}-1)}{x}=a$
 \end{itemize}
+\textbf{Some cases}
+\begin{itemize}
+\item $\lim_{x \to 0^+} log_b x=-F(b) \infty$
+\item $\lim_{x \to \infty} log_b x=F(b) \infty$
+\end{itemize}
+where $F(x)=2H(x-1)-1$ and $H(x)$ is $Oliver \thickspace Heaviside \thickspace step \thickspace function.$
 
 \end{document}
