--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -86,6 +86,20 @@ possibly c itself, $\lim_{x \to c} g(x)=L$. This is know as $Squeeze \thickspace
 \item $\lim_{x \to 0^+} log_b x=-F(b) \infty$
 \item $\lim_{x \to \infty} log_b x=F(b) \infty$
 \end{itemize}
-where $F(x)=2H(x-1)-1$ and $H(x)$ is $Oliver \thickspace Heaviside \thickspace step \thickspace function.$
-
+where $F(x)=2H(x-1)-1$ and $H(x)$ is Oliver Heaviside step function.
+\subsection{Trigonometric Functions}
+\begin{itemize}
+\item $\lim_{x \to 0} \frac{sinax}{ax}=1 $ for $a \not= 0$
+\item $\lim_{x \to 0} \frac{sinax}{bx}=\frac{a}{b} $ for $b \not= 0$
+\item $\lim_{x \to \infty} xsin( \frac{1}{x})=1$
+\item $\lim_{x \to 0} \frac{tanax}{ax}=1 $ for $a \not= 0$ 
+\item $\lim_{x \to 0} \frac{tanax}{bx}=\frac{a}{b} $ for $b \not= 0$
+\end{itemize}
+\subsection{Sums}
+\begin{itemize}
+\item $\lim_{x \to \infty} \sum_{k=1}^{n} \frac{1}{k}= 
+\infty $
+\item $\lim_{x \to \infty} (\sum_{k=1}^{n} \frac{1}{k}-logn)= 
+\gamma $.This is Euler Mascheroni Constant.
+\end{itemize}
 \end{document}
