--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -102,4 +102,21 @@ where $F(x)=2H(x-1)-1$ and $H(x)$ is Oliver Heaviside step function.
 \item $\lim_{x \to \infty} (\sum_{k=1}^{n} \frac{1}{k}-logn)= 
 \gamma $.This is Euler Mascheroni Constant.
 \end{itemize}
+\subsection{Notable Special Limits}
+\begin{itemize}
+\item $\lim_{x \to \infty} \frac{n}{\sqrt[n]{n!}}=e$
+\item $\lim_{x \to \infty} 2^n \sqrt{2- \sqrt{2 + \sqrt{2 +...+ \sqrt{2}}}}= \pi $
+\end{itemize}
+\subsection{Taylor Series}
+$$e^x = 1 + \frac{x}{1!}+ \frac{x^{2}}{2!}+ \frac{x^{3}}{3!}+...+ \infty$$
+$$ln(1+x) = x - \frac{x^{2}}{2}+ \frac{x^{3}}{3}- \frac{x^{4}}{4}+...+ \infty$$
+$$ln(1-x) = -(x + \frac{x^{2}}{2}+ \frac{x^{3}}{3}+ \frac{x^{4}}{4}+...+ \infty)$$
+$$ln(\frac{1+x}{1-x}) = 2(x+ \frac{x^{3}}{3}+ \frac{x^{5}}{5}+ \frac{x^{7}}{7}+...)$$
+$$sinx = x - \frac{x^{3}}{3!}+ \frac{x^{5}}{5!}- \frac{x^{7}}{7!}+...+ \infty$$
+$$cosx = 1 - \frac{x^{2}}{2!}+ \frac{x^{4}}{4!}- \frac{x^{6}}{6!}+...+ \infty$$
+$$tanx = x + \frac{x^{3}}{3}+ \frac{2x^{5}}{15}+...+ \infty$$
+$$secx = x + \frac{x^{2}}{2}+ \frac{5x^{4}}{24}+...+ \infty$$
+$$arcsinx/sin^{-1}x = x + \frac{x^{3}}{6}+ \frac{3x^{5}}{40}+...+ \infty$$
+$$arccosx/cos^{-1}x = \frac{\pi}{2}- (x + \frac{x^{3}}{6}+ \frac{3x^{5}}{40}+...)$$
+$$arctanx/tan^{-1}x = x - \frac{x^{3}}{3}+ \frac{x^{5}}{5}+...+ \infty$$
 \end{document}
