--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -248,4 +248,22 @@ Then:
 \item If $\psi''(t_o)>0,$ the function $y=f(x)$ has a $minimum$ at $x=x_o=\varphi(t_o)$
 \item If $\psi''(t_o)=0,$ the question of existence of $extremum$ remains open.
 \end{itemize}
+\section{Integration}
+\subsection{Standard Formula}
+\begin{itemize}
+\item $\int(ax+b)^n dx=\frac{(ax+b)^{n+1}}{a(n+1)}+c$
+\item $\int \frac{dx}{ax+b}=\frac{1}{a} ln(ax+b)  +c$
+\item $\int e^{ax+b}dx= \frac{1}{a} e^{ax+b}+c$
+\item $\int a^{px+q}dx=\frac{1}{p}\frac{a^{px+q}}{lna} +c$
+\item $\int sin(ax+b)dx=\frac{-1}{a}cos(ax+b)+c$
+\item $\int cos(ax+b)dx=\frac{1}{a}sin(ax+b)+c$
+\item $\int tan(ax+b)dx=\frac{1}{a}lnsec(ax+b)+c$
+\item $\int cot(ax+b)dx=\frac{1}{a}lnsin(ax+b)+c$
+\item $\int sec^2(ax+b)dx=\frac{1}{a}tan(ax+b)+c$
+\item $\int cosec^2(ax+b)dx=\frac{-1}{a}cot(ax+b)+c$
+\item $\int secxdx=ln(secx+tanx)+c$
+\item $\int cosexdx=ln(cosecx-cotx)+c$
+\item $\int \frac{dx}{\sqrt{a^2-x^2}}=sin^{-1}(\frac{x}{a})+c$
+\item $\int \frac{dx}{a^2+x^2}=\frac{1}{a}tan^{-1}\frac{x}{a}+c$
+\end{itemize}
 \end{document}
