--- a/Math/Resources/Calculus/Calculus.tex
+++ b/Math/Resources/Calculus/Calculus.tex
@@ -365,4 +365,5 @@ It is type of $\Gamma(n)$ for $n=\frac{1}{2}$
 $$\Gamma(\frac{1}{2})=\sqrt{\pi}$$
 Hence proved.
 \end{proof}
+\section{Differential Equation}
 \end{document}
