--- a/Math/Resources/Algebra/Algebra.tex
+++ b/Math/Resources/Algebra/Algebra.tex
@@ -65,4 +65,10 @@ $$\mathbf{U}=\{x:x=x\}$$
 \item $A \cup A=A$
 \end{itemize}
 \subsubsection{Results on number of elements in sets}
+If $A,B,C$ are finite sets and $\mathbf{U}$ be Universal finite set then:
+\begin{itemize}
+\item $n(A \cup B)= n(A) + n(B) -n(A \cap B)$
+\item $n(A-B)=n(A)-n(A \cap B)$
+\item $n(A \cup B \cup C)=n(A)+n(B)+n(C)-n(A \cap B)-n(B \cap C)-n(C \cap A)+n(A \cap B \cap C)$
+\end{itemize}
 \end{document}
