wavy curve remarks

--- a/Math/Resources/Algebra/Algebra.tex
+++ b/Math/Resources/Algebra/Algebra.tex
@@ -112,5 +112,23 @@ which is a required condition for the two equation to have a common root.
 \end{itemize}
 \subsection{Wavy Curve Method}
 The Method of intervals is used for solving inequalities of the form 
-$$f(x)= \frac{(x-a_1)^{n_1}(x-a_2)^{n_2}...(x-a_k)^{n_k}}{(x-b_1)^{m_1}(x-b_2)^{m_2}...(x-b_p)^{n_p}}$$
+$$f(x)= \frac{(x-a_1)^{n_1}(x-a_2)^{n_2}...(x-a_k)^{n_k}}{(x-b_1)^{m_1}(x-b_2)^{m_2}...(x-b_p)^{n_p}} >0(<0, \le 0, or \ge 0 )$$
+where $n_1,n_2,n_3...n_k$, $m_1,m_2,m_3..m_p$ $\in \mathbb{N}$ and the numbers $a_1,a_2,...a_k$, $b_1,b_2,...b_p$ $\in \mathbb{R}$ such that
+$a_i \not= b_i$ where $i=1,2,3,...k$ and $j=1,2,3,...p$.\\
+\textbf{Statements}
+\begin{itemize}
+\item All $zeros^1$ of the function $f(x)$ contained on left hand side of the inequality should be marked on the number line with black circles.
+\item All points of $discontinuities^2$ of the function $f(x)$ contained on left hand side of the inequality should be marked with white circles.
+\item Check the value of $f(x)$ for any real number greater than the right most marked number on the number line. 
+\item From right to left, beginning above the number line, a wavy curve should be drawn which passes through all the marked points so that when passes through $single \medspace point^3$, the curve intersects the number line, and when passing through a $double \medspace point^4$, the curve remains located on the one side of number line.
+\item The appropriate intervals are chosen in accordance with sign of inequality. Their union just represents the solution of inequality.
+\end{itemize}
+\textbf{Remarks}
+\begin{itemize}
+\item The points of discontinuity will never be included in answers.
+\item $Zeros^1$:The point for which $f(x)$ vanishes(becomes zero) is called the $zeros$ of function e.g. $x=a_i$
+\item $Discontinuities^2$:The points $x=b_j$ are the points of the $discontinuity$ of the function.
+\item $Single \medspace point^3$:If the exponents of factor is $odd$ then the point is called $single \medspace point$.
+\item $Double \medspace point^4$: If the exponent of factor is $even$ then the point is called $double \medspace point$.
+\end{itemize}
 \end{document}
