--- a/Math/Resources/Algebra/Algebra.tex
+++ b/Math/Resources/Algebra/Algebra.tex
@@ -137,7 +137,17 @@ It can be rewritten as $$f(x)=a\{(x+ \frac{b}{2a})^2 + \frac{D}{4a^2}\}$$ where 
 
 \begin{wrapfigure}{R}{0.3\textwidth}
 \centering
-\includegraphics[width=0.25\textwidth]{images/parabola.png}
-\caption{\label{fig:check} $y=4ax^2$ Trial figure}
+\includegraphics[width=0.25\textwidth]{images/figure1.png}
+\caption{\label{fig:check} $a>0,D<0$ \\ $f(x) \ge -\frac{D}{4a}$ $\forall x \in \mathbb{R}$ }
+\end{wrapfigure}
+\begin{wrapfigure}{R}{0.3\textwidth}
+\centering
+\includegraphics[width=0.25\textwidth]{images/figure2.png}
+\caption{\label{fig:check} $a>0,D=0$ \\ $f(x) \ge 0$ $\forall x \in \mathbb{R}$ }
+\end{wrapfigure}
+\begin{wrapfigure}{R}{0.3\textwidth}
+\centering
+\includegraphics[width=0.25\textwidth]{images/figure3.png}
+\caption{\label{fig:check} $a>0,D>0$ \\  $ -\frac{D}{4a} \le f(x)<0$ $\forall x \in (\alpha,\beta)$ }
 \end{wrapfigure}
 \end{document}
